# qtff

./: .gitignore  CMakeLists.txt  Dockerfile  KNOWN_ISSUES  LICENSE  README.md  build_inside_docker.sh  docker_build_container.sh  docker_build_ffqt.sh  docker_run_ffqt.sh  main.cpp  qtff.cpp  qtff.h
src/: ff_widget.cpp  ff_widget.h  ffqt.cpp  ffqt.h  main.cpp
